Fix: The column no longer wraps

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   justify-content: space-between;
-  background-color: var(--primary-background-color);
 }
