--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -43,4 +43,5 @@
   flex-flow: column wrap;
   align-items: center;
   padding: 0 15px 15px 15px;
+  background-color: var(--primary-background-color);
 }
